[gd_scene load_steps=18 format=3 uid="uid://yxds6yfydl2p"]

[ext_resource type="Script" path="res://Main_scene/main_scane.gd" id="1_sqr81"]
[ext_resource type="PackedScene" uid="uid://cvinuq87xvxxy" path="res://hands/hand_contr_left.tscn" id="2_kv11v"]
[ext_resource type="PackedScene" uid="uid://jyvxcyria8bw" path="res://hands/hand_contr_right.tscn" id="3_lbdro"]
[ext_resource type="PackedScene" uid="uid://cf31q22t58a5q" path="res://hands/hand_rigidbody_left.tscn" id="4_jhnl6"]
[ext_resource type="PackedScene" uid="uid://bipmcxfiyxtsx" path="res://hands/hand_rigidbody_right.tscn" id="5_5bi43"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_b71tx"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_34kgs"]
sky_material = SubResource("ProceduralSkyMaterial_b71tx")

[sub_resource type="Environment" id="Environment_5yyxf"]
background_mode = 2
sky = SubResource("Sky_34kgs")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_whqv6"]
albedo_color = Color(0.0416, 0.26, 0.04888, 1)

[sub_resource type="BoxMesh" id="BoxMesh_p77nr"]
size = Vector3(5, 0.5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_5t6wk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g6k66"]
size = Vector3(1, 1, 0.970215)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v3q6x"]
albedo_color = Color(1, 0.17648, 0.263947, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cxwv5"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_37ptb"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_872ra"]
albedo_color = Color(1, 0.957333, 0.36, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ljqyf"]
albedo_color = Color(0.0376095, 0.444083, 0.581592, 1)

[node name="MainScane" type="Node3D"]
script = ExtResource("1_sqr81")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5yyxf")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
current = true

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.894179, 0)
current = true

[node name="XRController3DLeft" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
pose = &"grip"
show_when_tracked = true

[node name="HandContrLeft" parent="XROrigin3D/XRController3DLeft" instance=ExtResource("2_kv11v")]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 0.41126, 0)

[node name="XRController3DRight" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"grip"
show_when_tracked = true

[node name="HandContrRight" parent="XROrigin3D/XRController3DRight" instance=ExtResource("3_lbdro")]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 0.441744, 0)

[node name="HandRigidbodyLeft" parent="." instance=ExtResource("4_jhnl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.512045, 0.619602, -0.881156)

[node name="HandRigidbodyRight" parent="." instance=ExtResource("5_5bi43")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.340061, 0.614006, -0.921901)

[node name="itens" type="Node3D" parent="."]

[node name="floor" type="StaticBody3D" parent="itens"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="itens/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.64584)
material_override = SubResource("StandardMaterial3D_whqv6")
mesh = SubResource("BoxMesh_p77nr")

[node name="table" type="StaticBody3D" parent="itens"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="itens/table"]
transform = Transform3D(0.999735, -0.0230014, 0, 0.0230014, 0.999735, 0, 0, 0, 1, -0.10645, 0.136902, -1.58244)
mesh = SubResource("BoxMesh_5t6wk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="itens/table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.134847, 0.147252, -1.58033)
shape = SubResource("BoxShape3D_g6k66")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.269, 0.800834, -1.198)
mass = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
material_override = SubResource("StandardMaterial3D_v3q6x")
mesh = SubResource("BoxMesh_cxwv5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_37ptb")

[node name="RigidBody3D2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00692195, 0.765869, -1.56718)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D2"]
material_override = SubResource("StandardMaterial3D_872ra")
mesh = SubResource("BoxMesh_cxwv5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D2"]
shape = SubResource("BoxShape3D_37ptb")

[node name="RigidBody3D3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.223126, 0.797252, -1.19788)
mass = 1.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D3"]
material_override = SubResource("StandardMaterial3D_ljqyf")
mesh = SubResource("BoxMesh_cxwv5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D3"]
shape = SubResource("BoxShape3D_37ptb")
